@@ -1,7 +1,6 @@
 package com.jme3.util;
 
 import com.jme3.system.Annotations.Internal;
-
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -28,7 +27,7 @@ public class BufferAllocatorFactory {
 
         final String className = System.getProperty(PROPERTY_BUFFER_ALLOCATOR_IMPLEMENTATION, ReflectionAllocator.class.getName());
         try {
-            return (BufferAllocator) Class.forName(className).newInstance();
+            return (BufferAllocator) Class.forName(className).getDeclaredConstructor().newInstance();
         } catch (final Throwable e) {
             LOGGER.log(Level.WARNING, "Unable to access {0}", className);
             return new PrimitiveAllocator();
